--- a/web/styles.css
+++ b/web/styles.css
@@ -8,6 +8,9 @@ body{
   font-family:"Trebuchet MS",Verdana,Geneva,Arial,Helvetica,sans-serif;
   font-size:0.8em;
 }
+.logo img {
+    border-radius:15px;
+}
 #page {
   background-color:white;
   width : 65%;
